2010-12-23  Till Kamppeter <till.kamppeter@gmail.com>

	* README: Corrected several typos. Thanks to Christopher Yeleighton
	  (giecrilj at stegny dot 2a dot pl) for the patch (bug #598).

2010-12-16  Till Kamppeter <till.kamppeter@gmail.com>

	* README: Corrected e-mail address of Helge Bliscke.

2010-12-15  Till Kamppeter <till.kamppeter@gmail.com>

	* foomaticrip.c: Run strtok() on a copy of the list of input files
	  for the first check, as strtok() modifies the string it parses,
	  overwriting the delimiters with zeros. Before, the list of input
	  files only showed its first entry when being parsed again for
	  actually printing the files (Ubuntu bug #676680).

	* Tagged branch for release 4.0.6.

	* VERSION, README, USAGE, configure.ac: Updated for release 4.0.6.

	* options.c: Allow length limitation for the substitution of the special
	  entities "&job;", "&user;", "&host;", "&title;", and "&options;":
	  The maximum length can be supplied via the PPD keywords
	  "*FoomaticRIP<Item>EntityMaxLength: <mexlength>" (for example
	  "*FoomaticRIPUserEntityMaxLength: 8") or by adding a number to the
	  individual entities (for example "&user8;"). If the string to
	  insert for the entity is longer than the limit, it gets cut off to
	  the limit. Feature requested by Uli Wehner from Ricoh
	  (http://forums.linux-foundation.org/read.php?30,13134).

2010-12-10  Till Kamppeter <till.kamppeter@gmail.com>

	* foomaticrip.c: Make file type detection also work if the PostScript
	  or PDF input is preceeded by PJL with an additional '%' character.
	  Thanks to Alexpro for reporting this as Ubuntu bug #688551 and
	  supplying the patch.

2010-11-11  Till Kamppeter <till.kamppeter@gmail.com>

	* util.c: The temp_dir() function did not take into account that
	  getenv() can return NULL. In such a case the fallback to /tmp
	  did not work. Thanks to Abel Abraham Camarillo Ojeda (spam at
	  verlet dot org) for the patch (bug #552).
